DevOps-Project-03/k8s/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager
  namespace: devops-project-03
spec:
  selector:
    app: task-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
